--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -76,7 +76,7 @@ Group: Applications/Emulators
 Requires: libvirt-python >= 0.7.0
 Requires: libxml2-python
 Requires: python-requests
-Requires: python-ipaddr
+Requires: python-ipaddress (For Python 2)
 Requires: libosinfo >= 0.2.10
 # Required for gobject-introspection infrastructure
 Requires: pygobject3-base
